base64 commons-httpclient